Square with form completed

--- a/app/views/calculation_templates/square_form.html.erb
+++ b/app/views/calculation_templates/square_form.html.erb
@@ -1,10 +1,13 @@
 
-<form>
+<form action="/square/results">
 
 <label for="69">Enter a number</label>
 
-<input id="69" type="text" placeholder="What number do you want to square?" number="">
+<input id="69" type="text" placeholder="What number do you want to square?" name="number">
 
 <button>Calculate square</button>
 
 </form>
+
+
+
